--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@nutui/nutui": "^2.2.8",
+    "@taoqf/quill-image-resize-module": "^3.0.1",
     "@types/lodash": "^4.14.159",
+    "@types/quill": "^2.0.3",
+    "@types/video.js": "^7.3.10",
     "ant-design-vue": "^1.6.4",
     "core-js": "^3.6.5",
     "fsevents": "^2.1.3",
     "lodash": "^4.17.20",
+    "quill": "^1.3.7",
+    "video.js": "^7.8.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
-    "vuex-class": "^0.3.2"
+    "vuex-class": "^0.3.2",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@nutui/babel-plugin-separate-import": "^1.2.2",
